--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,4 @@
+// Variables globales
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -73,6 +74,7 @@
   }
 }
 
+// Reset de base
 * {
   box-sizing: border-box;
   padding: 0;
