--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -1,81 +1,152 @@
 .home {
-    padding: 1rem;
-  
-    .intro {
-      display: flex;
+  padding: 1rem;
+
+  .intro {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 0.8rem;
+
+    @media (min-width: 768px) {
       flex-direction: row;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      margin-bottom: 0.8rem;
-  
-      @media (min-width: 768px) {
-        flex-direction: row;
+      text-align: left;
+    }
+
+    .presentation {
+      max-width: 500px;
+      margin-top: 1rem;
+
+      p {
+        font-size: 0.9rem;
+        line-height: 1.6;
+        color: #dbd5d5;
+        margin: 0;
         text-align: left;
-      }
-  
-      .presentation {
-        max-width: 500px;
-        margin-top: 1rem;
-  
-        p {
-          font-size: 0.9rem;
-          line-height: 1.6;
-          color: #dbd5d5;
-          margin: 0;
-          text-align: left;
-          margin-left: 0.5rem;
-          margin-bottom: 1.5rem;
-          transition: color 0.3s ease;
-  
-          &:hover {
-            color: #0070f3;
-          }
-        }
-      }
-  
-      .photo {
-        padding: 0.1rem;
-        border-radius: 90%;
-        background-color: #0070f3;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-  
-        .profile-photo {
-          border-radius: 50%;
-          object-fit: cover;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-          animation: fadeIn 1s ease-in-out;
-        }
-  
-        flex-shrink: 0;
-  
-        img {
-          border-radius: 50%;
-          object-fit: cover;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        margin-left: 0.5rem;
+        margin-bottom: 1.5rem;
+        transition: color 0.3s ease;
+
+        &:hover {
+          color: #0070f3;
         }
       }
     }
+
+    .photo {
+      padding: 0.1rem;
+      border-radius: 90%;
+      background-color: #0070f3;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .profile-photo {
+        border-radius: 50%;
+        object-fit: cover;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        animation: fadeIn 1s ease-in-out;
+      }
+
+      flex-shrink: 0;
+
+      img {
+        border-radius: 50%;
+        object-fit: cover;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      }
+    }
   }
+  .web-development-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+   .text {
+    max-width: 60%;
+    margin: 1rem;
+
+    p {
+        font-size: 1rem;
+        line-height: 1.5;
+        color : #fff;
+        margin-bottom: 1rem;
+    }
+    p + p {
+        margin-top: 1.5rem;
+    }
+   }
+   .logos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
+    margin: 1rem;
   
-  .separator {
-    width: 100%;
-    height: 0.2rem;
-    background-color: #0070f3;
-    margin: 1rem 0;
-    border: none;
+    img {
+      max-width: 80px;
+      height: auto;
+      animation: slideInFromRight 1s ease-in-out forwards, bounce 0.5s ease-in-out 1s forwards, pulse 2s infinite 1.5s;
+  
+      /* Vous pouvez également ajouter une transition pour un survol plus doux */
+      transition: transform 0.3s ease-in-out;
+    }
   }
-  
-  @keyframes fadeIn {
+  }
+}
+
+.separator {
+  display: flex;
+  width: 90%;
+  height: 0.2rem;
+  background-color: #0070f3;
+  margin: auto;
+  border: none;
+  margin: 1rem auto;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes slideInFromRight {
     from {
+      transform: translateX(150%);
       opacity: 0;
-      transform: scale(0.9);
     }
     to {
+      transform: translateX(0);
       opacity: 1;
+    }
+  }
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-10px);
+    }
+    60% {
+      transform: translateY(-5px);
+    }
+  }
+  
+  @keyframes pulse {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.05);
+    }
+    100% {
       transform: scale(1);
     }
   }
-  
